--- a/public/batch-run.html
+++ b/public/batch-run.html
@@ -1,242 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>exmxc.ai — EEI Batch Visibility Audit</title>
-<script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EEI Batch Visibility Audit — Analyst Mode</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 
-<style>
-  body {
-    background:#f6f7fb;
-    font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-  }
-  .json-box { background:#0f172a; color:#e2e8f0; padding:1rem; border-radius:0.75rem; font-size:0.9rem; white-space:pre-wrap; overflow-x:auto;}
-  .badge {padding:4px 8px;border-radius:9999px;font-size:11px;font-weight:600;display:inline-block}
-  .badge-observed {background:#dcfce7;color:#166534}
-  .badge-suppressed {background:#fef9c3;color:#854d0e}
-  .badge-opaque {background:#e5e7eb;color:#374151}
-  .badge-failed {background:#fee2e2;color:#7f1d1d}
-</style>
+  <style>
+    body { background:#f7f7fb; font-family: system-ui, -apple-system, Segoe UI; }
+    .card { background:white; border-radius:14px; padding:18px; border:1px solid #e5e7eb; }
+    .pill { background:#f3f4f6; padding:6px 10px; border-radius:999px; font-size:12px; display:flex; gap:6px; align-items:center; }
+    .state.observed { color:#065f46; background:#ecfdf5; padding:4px 8px; border-radius:6px; }
+    .state.suppressed { color:#92400e; background:#fffbeb; padding:4px 8px; border-radius:6px; }
+    .state.failed { color:#991b1b; background:#fef2f2; padding:4px 8px; border-radius:6px; }
+    .json-box { background:#020617; color:#e5e7eb; border-radius:12px; padding:14px; white-space:pre-wrap; }
+  </style>
 </head>
 
 <body class="max-w-6xl mx-auto py-10 px-5">
 
-<h1 class="text-3xl font-bold text-gray-900 text-center mb-2">
-  EEI Batch Visibility Audit (v6.6)
-</h1>
-<p class="text-center text-gray-600 text-sm mb-6">
-  Static-first visibility mapping across entities
-</p>
+  <h1 class="text-3xl font-bold text-gray-900 text-center mb-1">
+    EEI Batch Visibility Audit (Analyst Mode)
+  </h1>
+  <p class="text-center text-gray-500 mb-8">
+    Static-first visibility mapping for industry reporting
+  </p>
 
-<!-- SUMMARY -->
-<div class="bg-white border border-gray-200 rounded-xl p-6 shadow-sm mb-8">
+  <!-- ===== SUMMARY ===== -->
+  <div id="summary" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-8"></div>
 
-  <div class="flex flex-wrap justify-between gap-4">
-    <div>
-      <div class="text-xs uppercase text-gray-500 mb-1">Dataset</div>
-      <div class="font-semibold text-gray-900" id="datasetName">–</div>
+  <!-- ===== DATASET RUNNER ===== -->
+  <div class="card mb-8 flex flex-col md:flex-row gap-3 items-center">
+    <div class="flex-1 w-full">
+      <label class="block text-xs font-semibold text-gray-500 mb-1">Dataset</label>
+      <select id="datasetSelect" class="w-full border rounded-lg px-3 py-2 text-sm">
+        <option>Loading…</option>
+      </select>
     </div>
 
-    <div>
-      <div class="text-xs uppercase text-gray-500 mb-1">Sites</div>
-      <div class="font-semibold text-gray-900" id="siteCount">0</div>
-    </div>
-
-    <div>
-      <div class="text-xs uppercase text-gray-500 mb-1">Observed Avg ECC</div>
-      <div class="font-semibold text-gray-900" id="avgScore">--</div>
-    </div>
-  </div>
-
-  <div class="mt-5 grid grid-cols-4 gap-3 text-center">
-    <div class="bg-emerald-50 border border-emerald-200 rounded-lg p-3">
-      <div class="text-xs text-emerald-700">Observed</div>
-      <div class="text-lg font-bold text-emerald-800" id="countObserved">0</div>
-    </div>
-    <div class="bg-amber-50 border border-amber-200 rounded-lg p-3">
-      <div class="text-xs text-amber-700">Suppressed</div>
-      <div class="text-lg font-bold text-amber-800" id="countSuppressed">0</div>
-    </div>
-    <div class="bg-gray-50 border border-gray-200 rounded-lg p-3">
-      <div class="text-xs text-gray-600">Opaque</div>
-      <div class="text-lg font-bold text-gray-800" id="countOpaque">0</div>
-    </div>
-    <div class="bg-rose-50 border border-rose-200 rounded-lg p-3">
-      <div class="text-xs text-rose-700">Failed</div>
-      <div class="text-lg font-bold text-rose-800" id="countFailed">0</div>
-    </div>
-  </div>
-
-</div>
-
-<!-- CONTROLS -->
-<div class="bg-white border border-gray-200 rounded-xl p-6 shadow-sm mb-8 flex flex-col md:flex-row gap-4">
-  <div class="flex-1">
-    <label class="text-xs font-semibold text-gray-600 uppercase mb-1 block">Dataset</label>
-    <select id="datasetSelect" class="border border-gray-300 rounded-lg px-3 py-2 text-sm w-full bg-white">
-      <option>Loading…</option>
-    </select>
-  </div>
-
-  <div class="md:w-48">
-    <label class="text-xs font-semibold text-gray-600 uppercase mb-1 block">&nbsp;</label>
-    <button id="runBatchButton" class="bg-black text-white text-sm px-4 py-2 rounded-lg hover:bg-gray-800 w-full">
+    <button id="runBtn"
+      class="bg-black text-white px-5 py-2 rounded-lg w-full md:w-48">
       Run Batch
     </button>
-    <div id="batchStatus" class="text-xs text-gray-500 mt-2 text-center">&nbsp;</div>
-  </div>
-</div>
 
-<!-- GRID -->
-<div class="grid md:grid-cols-2 gap-8">
-
-  <!-- TABLE -->
-  <div>
-    <h2 class="text-lg font-semibold text-gray-900 mb-3">Visibility Results</h2>
-
-    <div class="border border-gray-200 rounded-xl bg-white shadow-sm max-h-[520px] overflow-auto">
-      <table class="min-w-full text-xs">
-        <thead class="bg-gray-50 border-b border-gray-200 sticky top-0">
-          <tr>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">URL</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">State</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">ECC</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">Schema</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">Mode</th>
-          </tr>
-        </thead>
-        <tbody id="resultsTableBody" class="divide-y divide-gray-100">
-          <tr><td colspan="5" class="px-3 py-4 text-center text-gray-400">No batch run yet.</td></tr>
-        </tbody>
-      </table>
-    </div>
+    <div id="runStatus" class="text-xs text-gray-500 text-center w-full md:w-32">&nbsp;</div>
   </div>
 
-  <!-- JSON -->
-  <div>
-    <h2 class="text-lg font-semibold text-gray-900 mb-3">Raw JSON</h2>
-    <pre id="result" class="json-box">// Awaiting batch…</pre>
+  <!-- ===== SUPPRESSION BREAKDOWN ===== -->
+  <div class="card mb-8">
+    <h2 class="font-semibold mb-3 text-gray-800">Suppression Breakdown</h2>
+    <div id="suppressionRow" class="flex flex-wrap gap-2"></div>
   </div>
 
-</div>
+  <!-- ===== RESULTS TABLE ===== -->
+  <h2 class="font-semibold mb-2 text-gray-800">Visibility Results</h2>
 
-<footer class="text-center text-xs text-gray-500 mt-10">
-  Powered by <span class="font-semibold text-black">exmxc.ai</span>
-</footer>
+  <div class="card mb-6 overflow-auto">
+    <table class="min-w-full text-sm">
+      <thead class="bg-gray-50 border-b">
+        <tr>
+          <th class="px-3 py-2 text-left">URL</th>
+          <th class="px-3 py-2 text-left">State</th>
+          <th class="px-3 py-2 text-left">Suppression</th>
+          <th class="px-3 py-2 text-left">ECC</th>
+          <th class="px-3 py-2 text-left">Mode</th>
+        </tr>
+      </thead>
+      <tbody id="resultsBody" class="divide-y"></tbody>
+    </table>
+  </div>
 
-<!-- ================= SCRIPT ================= -->
+  <!-- ===== RAW JSON TOGGLE ===== -->
+  <button id="jsonToggle"
+    class="text-sm underline text-gray-600 mb-2">
+    Show Raw JSON
+  </button>
+
+  <pre id="jsonBlock" class="json-box hidden">// Waiting for batch…</pre>
+
+
 <script>
-  const els = {
-    runBtn: runBatchButton,
-    result: result,
-    datasetSelect,
-    datasetName,
-    siteCount,
-    avgScore,
-    countObserved,
-    countSuppressed,
-    countOpaque,
-    countFailed,
-    batchStatus,
-    table: resultsTableBody
-  };
+const datasetSelect = document.getElementById("datasetSelect");
+const runBtn = document.getElementById("runBtn");
+const runStatus = document.getElementById("runStatus");
+const summary = document.getElementById("summary");
+const suppressionRow = document.getElementById("suppressionRow");
+const resultsBody = document.getElementById("resultsBody");
+const jsonToggle = document.getElementById("jsonToggle");
+const jsonBlock = document.getElementById("jsonBlock");
 
-  async function loadDatasets() {
-    try {
-      const r = await fetch("/api/verticals");
-      const j = await r.json();
-      datasetSelect.innerHTML = "";
-      j.verticals.forEach(v=>{
-        const o=document.createElement("option");
-        o.value=v.value; o.textContent=v.label||v.value;
-        datasetSelect.appendChild(o);
-      });
-    } catch {
-      datasetSelect.innerHTML="<option value='core-web'>core-web</option>";
-    }
+jsonToggle.addEventListener("click", () => {
+  jsonBlock.classList.toggle("hidden");
+  jsonToggle.textContent =
+    jsonBlock.classList.contains("hidden")
+      ? "Show Raw JSON"
+      : "Hide Raw JSON";
+});
+
+/* Load datasets */
+async function loadDatasets() {
+  try {
+    const res = await fetch("/api/verticals");
+    const data = await res.json();
+    datasetSelect.innerHTML = "";
+    data.verticals.forEach(v => {
+      const o = document.createElement("option");
+      o.value = v.value;
+      o.textContent = v.label || v.value;
+      datasetSelect.appendChild(o);
+    });
+  } catch {
+    datasetSelect.innerHTML = "<option value='core-web'>core-web</option>";
   }
-  loadDatasets();
+}
+loadDatasets();
 
-  function badge(state){
-    const s=state?.toLowerCase();
-    if(s==="observed") return `<span class="badge badge-observed">observed</span>`;
-    if(s==="suppressed") return `<span class="badge badge-suppressed">suppressed</span>`;
-    if(s==="opaque") return `<span class="badge badge-opaque">opaque</span>`;
-    if(s==="failed") return `<span class="badge badge-failed">failed</span>`;
-    return "—";
-  }
+/* Run batch */
+runBtn.addEventListener("click", async () => {
+  const dataset = datasetSelect.value;
+  runStatus.textContent = "Running…";
 
-  function mode(r){
-    if(!r.schemaMeta) return "static";
-    return r.schemaMeta.rendered ? "rendered":"static";
-  }
+  const res = await fetch(`/api/batch-run?dataset=${dataset}`);
+  const data = await res.json();
 
-  function schemaCount(r){
-    return r.schemaMeta?.schemaBlocks ?? 0;
-  }
+  jsonBlock.textContent = JSON.stringify(data, null, 2);
+  runStatus.textContent = "Completed";
 
-  function score(r){
-    return typeof r?.ecc?.score==="number" ? r.ecc.score.toFixed(2) : "—";
-  }
+  renderSummary(data.summary, data.dataset);
+  renderSuppression(data.suppressionBreakdown || {});
+  renderTable(data.results || []);
+});
 
-  function extractAvg(data){
-    return typeof data?.summary?.avgECC==="number" ? data.summary.avgECC : null;
-  }
+/* UI Renders */
+function renderSummary(s, dataset) {
+  summary.innerHTML = `
+    ${card("Dataset", dataset)}
+    ${card("Sites", s.totalUrls)}
+    ${card("Observed", s.observed, "bg-emerald-50")}
+    ${card("Suppressed", s.suppressed, "bg-amber-50")}
+    ${card("Opaque", s.opaque, "bg-gray-100")}
+    ${card("Failed", s.failed, "bg-rose-50")}
+    ${card("Observed Avg ECC", s.avgEntityScore)}
+  `;
+}
 
-  els.runBtn.addEventListener("click", async ()=>{
-    const dataset = datasetSelect.value || "core-web";
-    const url = `/api/batch-run?dataset=${dataset}`;
+function card(label,val,extra=""){ return `
+  <div class="card ${extra}">
+    <div class="text-xs text-gray-500 mb-1">${label}</div>
+    <div class="text-xl font-semibold">${val ?? "—"}</div>
+  </div>`;}
 
-    els.result.textContent="// Running…";
-    els.batchStatus.textContent="Running…";
-
-    try {
-      const res=await fetch(url);
-      const data=await res.json();
-      els.result.textContent=JSON.stringify(data,null,2);
-
-      if(!data.success){ els.batchStatus.textContent="Failed"; return; }
-
-      const s = data.summary || {};
-      els.datasetName.textContent = data.dataset || dataset;
-      els.siteCount.textContent = s.totalUrls ?? data.totalUrls ?? 0;
-
-      els.countObserved.textContent = s.observed ?? 0;
-      els.countSuppressed.textContent = s.suppressed ?? 0;
-      els.countOpaque.textContent = s.opaque ?? 0;
-      els.countFailed.textContent = s.failed ?? 0;
-
-      const avg = extractAvg(data);
-      els.avgScore.textContent = avg!=null ? avg.toFixed(2) : "--";
-
-      els.batchStatus.textContent="Completed";
-
-      // table
-      if(Array.isArray(data.results) && data.results.length){
-        els.table.innerHTML="";
-        data.results.forEach(r=>{
-          const tr=document.createElement("tr");
-          tr.innerHTML=`
-            <td class="px-3 py-2">
-              <a href="${r.url}" target="_blank" class="text-blue-600 hover:underline">${r.url}</a>
-            </td>
-            <td class="px-3 py-2">${badge(r.state?.label)}</td>
-            <td class="px-3 py-2">${score(r)}</td>
-            <td class="px-3 py-2">${schemaCount(r)}</td>
-            <td class="px-3 py-2">${mode(r)}</td>
-          `;
-          els.table.appendChild(tr);
-        });
-      } else {
-        els.table.innerHTML="<tr><td colspan='5' class='px-3 py-4 text-center text-gray-400'>No results returned.</td></tr>";
-      }
-
-    } catch(err){
-      els.batchStatus.textContent="Error";
-      els.result.textContent=JSON.stringify({error:err.message},null,2);
-    }
+function renderSuppression(obj){
+  suppressionRow.innerHTML="";
+  const keys = Object.keys(obj);
+  if(!keys.length){ suppressionRow.innerHTML="<span class='text-gray-400 text-sm'>No suppression reasons detected</span>"; return;}
+  keys.forEach(k=>{
+    suppressionRow.innerHTML+=`<div class="pill"><span>${k}</span><strong>${obj[k]}</strong></div>`;
   });
+}
+
+function renderTable(rows){
+  resultsBody.innerHTML="";
+  if(!rows.length){
+    resultsBody.innerHTML="<tr><td colspan='5' class='py-3 text-center text-gray-400'>No results</td></tr>";
+    return;
+  }
+  rows.forEach(r=>{
+    resultsBody.innerHTML += `
+      <tr>
+        <td class="px-3 py-2"><a href="${r.url}" target="_blank" class="text-blue-600 underline">${r.url}</a></td>
+        <td class="px-3 py-2"><span class="state ${r.state}">${r.state}</span></td>
+        <td class="px-3 py-2">${r.suppression?.reason || "—"}</td>
+        <td class="px-3 py-2">${r.entityScore?.toFixed?.(2) ?? "—"}</td>
+        <td class="px-3 py-2">${r.mode || "static"}</td>
+      </tr>`;
+  });
+}
 </script>
 
 </body>
