--- a/public/batch-run.html
+++ b/public/batch-run.html
@@ -1,181 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EEI Batch Visibility Audit — Analyst Mode</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>EEI Batch Visibility Audit</title>
+<script src="https://cdn.tailwindcss.com"></script>
 
-  <style>
-    body { background:#f7f7fb; font-family: system-ui, -apple-system, Segoe UI; }
-    .card { background:white; border-radius:14px; padding:18px; border:1px solid #e5e7eb; }
-    .pill { background:#f3f4f6; padding:6px 10px; border-radius:999px; font-size:12px; display:flex; gap:6px; align-items:center; }
-    .state.observed { color:#065f46; background:#ecfdf5; padding:4px 8px; border-radius:6px; }
-    .state.suppressed { color:#92400e; background:#fffbeb; padding:4px 8px; border-radius:6px; }
-    .state.failed { color:#991b1b; background:#fef2f2; padding:4px 8px; border-radius:6px; }
-    .json-box { background:#020617; color:#e5e7eb; border-radius:12px; padding:14px; white-space:pre-wrap; }
-  </style>
+<style>
+  body { background:#f8fafc; }
+  .pill { padding:2px 8px;border-radius:12px;font-size:12px }
+  .pill.observed { background:#dcfce7;color:#065f46 }
+  .pill.suppressed { background:#fef9c3;color:#854d0e }
+  .pill.opaque { background:#f1f5f9;color:#475569 }
+  .pill.failed { background:#fee2e2;color:#7f1d1d }
+  .json-box{background:#020617;color:#e5e7eb;border-radius:10px;padding:14px;font-size:12px}
+  details summary{cursor:pointer;color:#2563eb}
+</style>
 </head>
 
-<body class="max-w-6xl mx-auto py-10 px-5">
+<body class="max-w-6xl mx-auto px-6 py-10">
 
-  <h1 class="text-3xl font-bold text-gray-900 text-center mb-1">
-    EEI Batch Visibility Audit (Analyst Mode)
-  </h1>
-  <p class="text-center text-gray-500 mb-8">
-    Static-first visibility mapping for industry reporting
-  </p>
+<h1 class="text-3xl font-bold text-center mb-1">EEI Batch Visibility Audit (v6.6)</h1>
+<p class="text-center text-gray-500 mb-8">Static-first visibility mapping across entities</p>
 
-  <!-- ===== SUMMARY ===== -->
-  <div id="summary" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-8"></div>
+<!-- SUMMARY GRID -->
+<div class="grid grid-cols-2 md:grid-cols-5 gap-3 mb-8">
 
-  <!-- ===== DATASET RUNNER ===== -->
-  <div class="card mb-8 flex flex-col md:flex-row gap-3 items-center">
-    <div class="flex-1 w-full">
-      <label class="block text-xs font-semibold text-gray-500 mb-1">Dataset</label>
-      <select id="datasetSelect" class="w-full border rounded-lg px-3 py-2 text-sm">
-        <option>Loading…</option>
-      </select>
-    </div>
+  <div class="bg-white border rounded-xl p-4 shadow-sm">
+    <div class="text-xs text-gray-500 uppercase mb-1">Dataset</div>
+    <div id="datasetLabel" class="font-semibold text-gray-900">—</div>
+  </div>
 
-    <button id="runBtn"
-      class="bg-black text-white px-5 py-2 rounded-lg w-full md:w-48">
+  <div class="bg-white border rounded-xl p-4 shadow-sm">
+    <div class="text-xs text-gray-500 uppercase mb-1">Sites</div>
+    <div id="siteTotal" class="font-semibold text-gray-900">—</div>
+  </div>
+
+  <div class="bg-white border rounded-xl p-4 shadow-sm">
+    <div class="text-xs text-gray-500 uppercase mb-1">Observed</div>
+    <div id="observedCount" class="font-semibold text-emerald-700">—</div>
+  </div>
+
+  <div class="bg-white border rounded-xl p-4 shadow-sm">
+    <div class="text-xs text-gray-500 uppercase mb-1">Suppressed</div>
+    <div id="suppressedCount" class="font-semibold text-amber-700">—</div>
+  </div>
+
+  <div class="bg-white border rounded-xl p-4 shadow-sm">
+    <div class="text-xs text-gray-500 uppercase mb-1">Observed Avg ECC</div>
+    <div id="observedAvgECC" class="font-semibold text-gray-900">—</div>
+  </div>
+</div>
+
+<!-- CONTROLS -->
+<div class="flex flex-col md:flex-row gap-3 items-center mb-8 bg-white border rounded-xl p-5 shadow-sm">
+  <div class="flex-1 w-full">
+    <label class="text-xs text-gray-600 uppercase mb-1 block">Dataset</label>
+    <select id="datasetSelect" class="w-full border rounded-lg px-3 py-2 text-sm bg-white"></select>
+  </div>
+
+  <div class="md:w-44 w-full">
+    <button id="runBtn" class="w-full bg-black text-white rounded-lg py-2 text-sm hover:bg-gray-800">
       Run Batch
     </button>
+    <div id="status" class="text-xs text-gray-500 text-center mt-1">&nbsp;</div>
+  </div>
+</div>
 
-    <div id="runStatus" class="text-xs text-gray-500 text-center w-full md:w-32">&nbsp;</div>
+<!-- SUPPRESSION BREAKDOWN -->
+<div id="suppressionBox" class="hidden bg-white border rounded-xl p-5 shadow-sm mb-8">
+  <div class="text-sm font-semibold mb-1">Suppression Breakdown</div>
+  <div id="suppressionList" class="text-sm text-gray-600">No suppression detected</div>
+</div>
+
+<!-- RESULTS GRID -->
+<div class="grid md:grid-cols-2 gap-6">
+
+  <!-- TABLE -->
+  <div>
+    <div class="text-lg font-semibold mb-2">Visibility Results</div>
+    <div class="border rounded-xl bg-white shadow-sm max-h-[520px] overflow-auto">
+      <table class="min-w-full text-sm">
+        <thead class="bg-gray-50 sticky top-0">
+          <tr>
+            <th class="px-3 py-2 text-left">URL</th>
+            <th class="px-3 py-2">State</th>
+            <th class="px-3 py-2">Suppression</th>
+            <th class="px-3 py-2">ECC</th>
+            <th class="px-3 py-2">Mode</th>
+          </tr>
+        </thead>
+        <tbody id="resultsBody" class="divide-y"></tbody>
+      </table>
+    </div>
   </div>
 
-  <!-- ===== SUPPRESSION BREAKDOWN ===== -->
-  <div class="card mb-8">
-    <h2 class="font-semibold mb-3 text-gray-800">Suppression Breakdown</h2>
-    <div id="suppressionRow" class="flex flex-wrap gap-2"></div>
+  <!-- RAW JSON -->
+  <div>
+    <details>
+      <summary class="mb-2">Show Raw JSON</summary>
+      <pre id="rawBox" class="json-box">// Awaiting run…</pre>
+    </details>
   </div>
-
-  <!-- ===== RESULTS TABLE ===== -->
-  <h2 class="font-semibold mb-2 text-gray-800">Visibility Results</h2>
-
-  <div class="card mb-6 overflow-auto">
-    <table class="min-w-full text-sm">
-      <thead class="bg-gray-50 border-b">
-        <tr>
-          <th class="px-3 py-2 text-left">URL</th>
-          <th class="px-3 py-2 text-left">State</th>
-          <th class="px-3 py-2 text-left">Suppression</th>
-          <th class="px-3 py-2 text-left">ECC</th>
-          <th class="px-3 py-2 text-left">Mode</th>
-        </tr>
-      </thead>
-      <tbody id="resultsBody" class="divide-y"></tbody>
-    </table>
-  </div>
-
-  <!-- ===== RAW JSON TOGGLE ===== -->
-  <button id="jsonToggle"
-    class="text-sm underline text-gray-600 mb-2">
-    Show Raw JSON
-  </button>
-
-  <pre id="jsonBlock" class="json-box hidden">// Waiting for batch…</pre>
-
+</div>
 
 <script>
 const datasetSelect = document.getElementById("datasetSelect");
 const runBtn = document.getElementById("runBtn");
-const runStatus = document.getElementById("runStatus");
-const summary = document.getElementById("summary");
-const suppressionRow = document.getElementById("suppressionRow");
+const statusEl = document.getElementById("status");
+const rawBox = document.getElementById("rawBox");
 const resultsBody = document.getElementById("resultsBody");
-const jsonToggle = document.getElementById("jsonToggle");
-const jsonBlock = document.getElementById("jsonBlock");
 
-jsonToggle.addEventListener("click", () => {
-  jsonBlock.classList.toggle("hidden");
-  jsonToggle.textContent =
-    jsonBlock.classList.contains("hidden")
-      ? "Show Raw JSON"
-      : "Hide Raw JSON";
-});
+const datasetLabel = document.getElementById("datasetLabel");
+const siteTotal = document.getElementById("siteTotal");
+const observedCount = document.getElementById("observedCount");
+const suppressedCount = document.getElementById("suppressedCount");
+const observedAvgECC = document.getElementById("observedAvgECC");
 
-/* Load datasets */
-async function loadDatasets() {
-  try {
+const suppressionBox = document.getElementById("suppressionBox");
+const suppressionList = document.getElementById("suppressionList");
+
+/* ------------------
+   Load datasets list
+------------------ */
+async function loadDatasets(){
+  try{
     const res = await fetch("/api/verticals");
     const data = await res.json();
     datasetSelect.innerHTML = "";
-    data.verticals.forEach(v => {
-      const o = document.createElement("option");
-      o.value = v.value;
-      o.textContent = v.label || v.value;
-      datasetSelect.appendChild(o);
+    data.verticals.forEach(v=>{
+      const opt=document.createElement("option");
+      opt.value=v.value;
+      opt.textContent=v.label||v.value;
+      datasetSelect.appendChild(opt);
     });
   } catch {
-    datasetSelect.innerHTML = "<option value='core-web'>core-web</option>";
+    datasetSelect.innerHTML="<option value='core-web'>core-web</option>";
   }
 }
 loadDatasets();
 
-/* Run batch */
-runBtn.addEventListener("click", async () => {
-  const dataset = datasetSelect.value;
-  runStatus.textContent = "Running…";
-
-  const res = await fetch(`/api/batch-run?dataset=${dataset}`);
-  const data = await res.json();
-
-  jsonBlock.textContent = JSON.stringify(data, null, 2);
-  runStatus.textContent = "Completed";
-
-  renderSummary(data.summary, data.dataset);
-  renderSuppression(data.suppressionBreakdown || {});
-  renderTable(data.results || []);
-});
-
-/* UI Renders */
-function renderSummary(s, dataset) {
-  summary.innerHTML = `
-    ${card("Dataset", dataset)}
-    ${card("Sites", s.totalUrls)}
-    ${card("Observed", s.observed, "bg-emerald-50")}
-    ${card("Suppressed", s.suppressed, "bg-amber-50")}
-    ${card("Opaque", s.opaque, "bg-gray-100")}
-    ${card("Failed", s.failed, "bg-rose-50")}
-    ${card("Observed Avg ECC", s.avgEntityScore)}
-  `;
-}
-
-function card(label,val,extra=""){ return `
-  <div class="card ${extra}">
-    <div class="text-xs text-gray-500 mb-1">${label}</div>
-    <div class="text-xl font-semibold">${val ?? "—"}</div>
-  </div>`;}
-
-function renderSuppression(obj){
-  suppressionRow.innerHTML="";
-  const keys = Object.keys(obj);
-  if(!keys.length){ suppressionRow.innerHTML="<span class='text-gray-400 text-sm'>No suppression reasons detected</span>"; return;}
-  keys.forEach(k=>{
-    suppressionRow.innerHTML+=`<div class="pill"><span>${k}</span><strong>${obj[k]}</strong></div>`;
-  });
+/* ------------------
+   Helpers
+------------------ */
+function pill(state){
+  return `<span class="pill ${state}">${state}</span>`;
 }
 
 function renderTable(rows){
   resultsBody.innerHTML="";
+
   if(!rows.length){
-    resultsBody.innerHTML="<tr><td colspan='5' class='py-3 text-center text-gray-400'>No results</td></tr>";
+    resultsBody.innerHTML=`<tr><td colspan="5" class="text-center py-3 text-gray-400">No results</td></tr>`;
     return;
   }
+
   rows.forEach(r=>{
-    resultsBody.innerHTML += `
+    const state =
+      r.state?.value ||
+      r.visibility?.state ||
+      r.state ||
+      "—";
+
+    const suppression =
+      r.suppression?.reason ||
+      r.visibility?.suppression?.reason ||
+      "—";
+
+    const ecc =
+      typeof r.entityScore === "number" ? r.entityScore.toFixed(2) :
+      typeof r.ecc === "number" ? r.ecc.toFixed(2) :
+      "—";
+
+    const mode =
+      r.schemaMeta?.rendered ? "rendered" : "static";
+
+    resultsBody.innerHTML+=`
       <tr>
-        <td class="px-3 py-2"><a href="${r.url}" target="_blank" class="text-blue-600 underline">${r.url}</a></td>
-        <td class="px-3 py-2"><span class="state ${r.state}">${r.state}</span></td>
-        <td class="px-3 py-2">${r.suppression?.reason || "—"}</td>
-        <td class="px-3 py-2">${r.entityScore?.toFixed?.(2) ?? "—"}</td>
-        <td class="px-3 py-2">${r.mode || "static"}</td>
+        <td class="px-3 py-2">
+          <a href="${r.url}" target="_blank" class="text-blue-600 underline">${r.url}</a>
+        </td>
+        <td class="px-3 py-2 text-center">${pill(state)}</td>
+        <td class="px-3 py-2 text-center">${suppression}</td>
+        <td class="px-3 py-2 text-center">${ecc}</td>
+        <td class="px-3 py-2 text-center">${mode}</td>
       </tr>`;
   });
 }
+
+/* ------------------
+   Compute summary stats
+------------------ */
+function updateSummary(payload){
+  datasetLabel.textContent = payload.dataset || "—";
+  siteTotal.textContent = payload.totalUrls ?? payload.results?.length ?? "—";
+
+  const observed = payload.results.filter(r =>
+    (r.state?.value || r.state) === "observed"
+  );
+
+  const suppressed = payload.results.filter(r =>
+    (r.state?.value || r.state) === "suppressed"
+  );
+
+  observedCount.textContent = observed.length;
+  suppressedCount.textContent = suppressed.length;
+
+  const eccValues = observed
+    .map(r => r.entityScore)
+    .filter(n => typeof n === "number");
+
+  observedAvgECC.textContent =
+    eccValues.length ? (eccValues.reduce((a,b)=>a+b,0)/eccValues.length).toFixed(2) : "—";
+
+  if(suppressed.length){
+    suppressionBox.classList.remove("hidden");
+    const reasons = {};
+    suppressed.forEach(r=>{
+      const reason = r.suppression?.reason || "unknown";
+      reasons[reason] = (reasons[reason] || 0)+1;
+    });
+    suppressionList.innerHTML = Object.entries(reasons)
+      .map(([k,v])=>`<div>${k} — <strong>${v}</strong></div>`).join("");
+  } else {
+    suppressionBox.classList.add("hidden");
+  }
+}
+
+/* ------------------
+   Run batch
+------------------ */
+runBtn.addEventListener("click", async ()=>{
+  const dataset = datasetSelect.value;
+  statusEl.textContent="Running…";
+
+  try{
+    const res = await fetch(`/api/batch-run?dataset=${dataset}`);
+    const data = await res.json();
+    rawBox.textContent = JSON.stringify(data,null,2);
+
+    if(!data.success){ statusEl.textContent="Batch failed"; return; }
+
+    updateSummary(data);
+    renderTable(data.results || []);
+    statusEl.textContent="Completed";
+
+  } catch(err){
+    statusEl.textContent="Error";
+    rawBox.textContent = JSON.stringify({error:err.message},null,2);
+  }
+});
 </script>
 
 </body>
