--- a/public/batch-run.html
+++ b/public/batch-run.html
@@ -64,7 +64,6 @@
       <div class="text-lg font-bold text-rose-800" id="countFailed">0</div>
     </div>
   </div>
-
 </div>
 
 <!-- ===== CONTROLS ===== -->
@@ -85,42 +84,38 @@
   </div>
 </div>
 
-<!-- ===== GRID ===== -->
-<div class="grid md:grid-cols-2 gap-8">
 
-  <!-- TABLE -->
-  <div>
-    <h2 class="text-lg font-semibold text-gray-900 mb-3">Visibility Results</h2>
+<!-- ===== TABLE ===== -->
+<h2 class="text-lg font-semibold text-gray-900 mb-2">Visibility Results</h2>
 
-    <div class="border border-gray-200 rounded-xl bg-white shadow-sm max-h-[520px] overflow-auto">
-      <table class="min-w-full text-xs">
-        <thead class="bg-gray-50 border-b border-gray-200 sticky top-0">
-          <tr>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">URL</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">State</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">Suppression</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">ECC</th>
-            <th class="px-3 py-2 text-left font-semibold text-gray-600">Mode</th>
-          </tr>
-        </thead>
-        <tbody id="resultsTableBody" class="divide-y divide-gray-100">
-          <tr><td colspan="5" class="px-3 py-4 text-center text-gray-400">No batch run yet.</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <!-- RAW JSON -->
-  <div>
-    <h2 class="text-lg font-semibold text-gray-900 mb-3">Raw JSON</h2>
-    <pre id="result" class="json-box">// Awaiting batch…</pre>
-  </div>
-
+<div class="border border-gray-200 rounded-xl bg-white shadow-sm max-h-[520px] overflow-auto mb-6">
+  <table class="min-w-full text-xs">
+    <thead class="bg-gray-50 border-b border-gray-200 sticky top-0">
+      <tr>
+        <th class="px-3 py-2 text-left font-semibold text-gray-600">URL</th>
+        <th class="px-3 py-2 text-left font-semibold text-gray-600">State</th>
+        <th class="px-3 py-2 text-left font-semibold text-gray-600">Suppression</th>
+        <th class="px-3 py-2 text-left font-semibold text-gray-600">ECC</th>
+        <th class="px-3 py-2 text-left font-semibold text-gray-600">Mode</th>
+      </tr>
+    </thead>
+    <tbody id="resultsTableBody" class="divide-y divide-gray-100">
+      <tr><td colspan="5" class="px-3 py-4 text-center text-gray-400">No batch run yet.</td></tr>
+    </tbody>
+  </table>
 </div>
+
+
+<!-- ===== RAW JSON TOGGLE ===== -->
+<details>
+  <summary class="cursor-pointer text-sm text-blue-600 mb-2">Show Raw JSON</summary>
+  <pre id="result" class="json-box">// Awaiting batch…</pre>
+</details>
 
 <footer class="text-center text-xs text-gray-500 mt-10">
   Powered by <span class="font-semibold text-black">exmxc.ai</span>
 </footer>
+
 
 <!-- ===== SCRIPT ===== -->
 <script>
@@ -139,26 +134,27 @@ const els = {
   table: resultsTableBody
 };
 
-async function loadDatasets() {
-  try {
+/* Load datasets */
+(async function loadDatasets(){
+  try{
     const r = await fetch("/api/verticals");
     const j = await r.json();
     datasetSelect.innerHTML = "";
     j.verticals.forEach(v=>{
       const o=document.createElement("option");
-      o.value=v.value; o.textContent=v.label||v.value;
+      o.value=v.value;
+      o.textContent=v.label||v.value;
       datasetSelect.appendChild(o);
     });
   } catch {
     datasetSelect.innerHTML="<option value='core-web'>core-web</option>";
   }
-}
-loadDatasets();
+})();
 
-/* ===== STATE + FIELD HELPERS (RESTORED) ===== */
+/* ===== Helpers that use normalized fields first, fall back to legacy ===== */
 
 function badge(state){
-  const s=(state||"").toString().toLowerCase();
+  const s=(state||"").toLowerCase();
   if(s==="observed") return `<span class="badge badge-observed">observed</span>`;
   if(s==="suppressed") return `<span class="badge badge-suppressed">suppressed</span>`;
   if(s==="opaque") return `<span class="badge badge-opaque">opaque</span>`;
@@ -166,38 +162,40 @@ function badge(state){
   return "—";
 }
 
-function safeState(r){
-  return r?.state?.label
-      || r?.state?.value
-      || r?.visibility?.state?.label
+function getState(r){
+  return r?.state
+      || r?.state?.label
       || r?.visibility?.state?.value
+      || r?.visibility?.state
       || "—";
 }
 
-function safeSuppression(r){
-  return r?.suppression?.reason
+function getSuppression(r){
+  return r?.suppression
       || r?.visibility?.suppression?.reason
       || "—";
 }
 
-function safeECC(r){
-  return typeof r?.ecc?.score==="number"
-    ? r.ecc.score.toFixed(2)
-    : "—";
+function getECC(r){
+  return typeof r?.entityScore === "number"
+      ? r.entityScore.toFixed(2)
+      : typeof r?.ecc?.score === "number"
+      ? r.ecc.score.toFixed(2)
+      : "—";
 }
 
-function safeMode(r){
-  return r?.schemaMeta?.rendered ? "rendered" : "static";
+function getMode(r){
+  return r?.mode
+      || (r?.schemaMeta?.rendered ? "rendered" : "static");
 }
-
-/* ===== SUMMARY HELPERS ===== */
 
 function extractAvg(data){
-  return typeof data?.summary?.avgECC==="number" ? data.summary.avgECC : null;
+  return typeof data?.summary?.avgECC === "number"
+    ? data.summary.avgECC
+    : null;
 }
 
 /* ===== RUN BATCH ===== */
-
 els.runBtn.addEventListener("click", async ()=>{
   const dataset = datasetSelect.value || "core-web";
   const url = `/api/batch-run?dataset=${dataset}`;
@@ -205,10 +203,10 @@ els.runBtn.addEventListener("click", async ()=>{
   els.result.textContent="// Running…";
   els.batchStatus.textContent="Running…";
 
-  try {
-    const res=await fetch(url);
-    const data=await res.json();
-    els.result.textContent=JSON.stringify(data,null,2);
+  try{
+    const res = await fetch(url);
+    const data = await res.json();
+    els.result.textContent = JSON.stringify(data,null,2);
 
     if(!data.success){
       els.batchStatus.textContent="Failed";
@@ -217,7 +215,7 @@ els.runBtn.addEventListener("click", async ()=>{
 
     const s = data.summary || {};
     els.datasetName.textContent = data.dataset || dataset;
-    els.siteCount.textContent = s.totalUrls ?? data.totalUrls ?? 0;
+    els.siteCount.textContent = s.totalUrls ?? 0;
 
     els.countObserved.textContent = s.observed ?? 0;
     els.countSuppressed.textContent = s.suppressed ?? 0;
@@ -229,29 +227,32 @@ els.runBtn.addEventListener("click", async ()=>{
 
     els.batchStatus.textContent="Completed";
 
-    // === TABLE RENDER ===
+    /* ===== TABLE RENDER ===== */
     if(Array.isArray(data.results) && data.results.length){
-      els.table.innerHTML="";
+      els.table.innerHTML = "";
       data.results.forEach(r=>{
-        const tr=document.createElement("tr");
+        const tr = document.createElement("tr");
         tr.innerHTML = `
           <td class="px-3 py-2">
-            <a href="${r.url}" target="_blank" class="text-blue-600 hover:underline">${r.url}</a>
+            <a href="${r.url}" target="_blank" class="text-blue-600 hover:underline">
+              ${r.url}
+            </a>
           </td>
-          <td class="px-3 py-2">${badge(safeState(r))}</td>
-          <td class="px-3 py-2">${safeSuppression(r)}</td>
-          <td class="px-3 py-2">${safeECC(r)}</td>
-          <td class="px-3 py-2">${safeMode(r)}</td>
+          <td class="px-3 py-2">${badge(getState(r))}</td>
+          <td class="px-3 py-2">${getSuppression(r)}</td>
+          <td class="px-3 py-2">${getECC(r)}</td>
+          <td class="px-3 py-2">${getMode(r)}</td>
         `;
         els.table.appendChild(tr);
       });
     } else {
-      els.table.innerHTML="<tr><td colspan='5' class='px-3 py-4 text-center text-gray-400'>No results returned.</td></tr>";
+      els.table.innerHTML =
+        "<tr><td colspan='5' class='px-3 py-4 text-center text-gray-400'>No results returned.</td></tr>";
     }
 
   } catch(err){
     els.batchStatus.textContent="Error";
-    els.result.textContent=JSON.stringify({error:err.message},null,2);
+    els.result.textContent = JSON.stringify({error:err.message},null,2);
   }
 });
 </script>
